testsuite/tests/properties/invalid_node_builder/list_missing_user_field/test.lkt
from common import BaseExample, FooNode, Literal

@synthetic
class EmptyNode: FooNode {
}

@synthetic
class SyntheticLiteralList: ASTList[Literal] {
    f: Int
}

class Example: BaseExample {
    @exported
    @lazy
    prop: SyntheticLiteralList =
        SyntheticLiteralList.builder([]: NodeBuilder[Literal]).build()
}
